--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,8 @@
 <h2> no message commit</h2
 <h1> 수정수정</h1>
 im still alive
+
+no merge
 <p>reset hard 로그기록도 지워짐 실제 파일이 삭제된 이전 상태로 복원함</p> 
 <br>reset soft 스테이지 영역을 포함한 상태로 복원함 </br>
 디폴트는 mixed
